--- a/Capstone/app/src/main/res/values/strings.xml
+++ b/Capstone/app/src/main/res/values/strings.xml
@@ -64,4 +64,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <string name="about_this_app">This app was made for Udacity Android Capstone project;</string>
+    <string name="email_address">velocity2772@gmail.com</string>
+    <string name="title_activity_about">About this App</string>
 </resources>
