add google maps

--- a/Capstone/app/src/main/res/values/strings.xml
+++ b/Capstone/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
 
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="ad_button">This is AD Button</string>
+    <string name="title_activity_maps">Soongsil University Location</string>
 </resources>
