--- a/Capstone/app/src/main/res/values/strings.xml
+++ b/Capstone/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="ad_button">This is AD Button</string>
     <string name="title_activity_maps">Soongsil University Location</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
